# intelligent-contract-advisor

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  deploy_frontend.sh  gradio_app.py  pyproject.toml
contract_advisor/: __init__.py  agent.py  config.py  prompts.py
contract_advisor/sub_agents/: __init__.py
contract_advisor/sub_agents/critic/: agent.py  prompts.py
contract_advisor/sub_agents/ingestion/: agent.py  prompts.py
contract_advisor/sub_agents/risk_evaluator/: agent.py  prompts.py
contract_advisor/sub_agents/term_extractor/: agent.py  prompts.py
contract_advisor/tools/: __init__.py  gcs_connector.py
deployment/: contract_advisor-0.1.0-py3-none-any.whl  deploy.py
